--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1"
   },
+  "type": "module",
   "name": "server",
   "version": "1.0.0",
   "description": "",
